# RepoGym-RL

./: README.md  package-lock.json  package.json  pyproject.toml  verify_dispatcher.py  verify_lifecycle.py  verify_pipeline.py  verify_rewards.py  verify_sandbox.py  verify_tasks.py  verify_telemetry.py
.agent/get-shit-done/references/: principles.md  scope-estimation.md
.agent/get-shit-done/templates/: phase-prompt.md  roadmap.md
.agent/get-shit-done/workflows/: complete-milestone.md  create-milestone.md  create-roadmap.md  debug.md  discovery-phase.md  discuss-milestone.md  discuss-phase.md  execute-plan.md  map-codebase.md  plan-phase.md  research-phase.md  verify-work.md
.agent/workflows/gsd/: complete-milestone.md  create-roadmap.md  debug.md  discuss-milestone.md  discuss-phase.md  execute-phase.md  execute-plan.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  plan-fix.md  plan-phase.md  research-phase.md  resume-task.md  resume-work.md  verify-work.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-sandbox-infrastructure/: 02-01-PLAN.md  (+5 more)
demo/: README.md  run_demo.py
demo/project/: string_utils.py  test_strings.py
docs/: ENV_SPEC.md
logs/: ep_1769565126.jsonl  ep_1769565148.jsonl  ep_1769568500.jsonl  ep_1769568518.jsonl  ep_1769568534.jsonl  ep_1769569795.jsonl
src/: index.css
src/repogym/: actions.py  env.py  tasks.py  telemetry.py
web/src/: App.jsx  index.css
(+34 files in other folders)
